# LittleEngine

./: .gitignore  ImGuiOpenGLRenderer.cpp  LICENSE  README.md
Little/: CMakeLists.txt
Little/include/: Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Little.h  Log.h  Window.h  embed_breakpoint.h  lepch.h
Little/include/Core/: Timestep.h
Little/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Little/include/ImGui/: ImGuiLayer.h
Little/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLInput.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGLWindow.h
Little/include/Renderer/: Buffer.h  Camera.h  GraphicsContext.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
Little/src/: Application.cpp  Buffer.cpp  Camera.cpp  ImGuiBuild.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Little/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLInput.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
SandBox/: CMakeLists.txt  CMakeSettings.json
SandBox/assets/shaders/: Texture.glsl
SandBox/src/: SandBoxApp.cpp
run/: cmake.bat  cmake.sh  run.bat  run.sh
